...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_registro_info_candidato" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/nombreEditText"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:contentDescription="@string/acces_ingrese_nombre"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitulo_registro_info_candidato" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/tipoIdentificacionSpinner"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:contentDescription="@string/acces_ingrese_id"
        android:textColor="@color/black"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/identificacionEditText"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/identificacion"
        android:contentDescription="@string/acces_ingrese_id"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoIdentificacionSpinner" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/direccionEditText"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/direccion"
        android:contentDescription="@string/acces_ingrese_direccion"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identificacionEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/telefonoEditText"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:contentDescription="@string/acces_ingrese_telefono"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direccionEditText" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/paisSpinner"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="pais"
        android:contentDescription="@string/acces_ingrese_pais"
...
        android:textSize="12sp"
        android:visibility="gone"
        android:layout_below="@id/paisSpinner"
        android:layout_centerHorizontal="true" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/departamentoSpinner"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="departamento"
        android:contentDescription="@string/acces_ingrese_departamento"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paisSpinner" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/ciudadSpinner"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="ciudad"
        android:contentDescription="@string/acces_ingrese_ciudad"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departamentoSpinner" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/profesionEditText"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/profesion"
        android:contentDescription="@string/acces_ingrese_profesion"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ciudadSpinner" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/experienciaEditText"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/experiencia"
        android:contentDescription="@string/acces_ingrese_experiencia"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profesionEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continuar_regis_per_candidato_button"
        android:layout_width="246dp"
        android:layout_height="42dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
...
