...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_registro_info_candidato" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ultimoEstudioEditText"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/ultimoEstudio"
        android:contentDescription="@string/acces_ingrese_ultimo_estudio"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitulo_registro_edu_candidato" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/institucionEditText"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/institucion"
        android:contentDescription="@string/acces_ingrese_institucion"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ultimoEstudioEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/anioGradoEditText"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/anioGrado"
        android:contentDescription="@string/acces_ingrese_anio_grado"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ciudadSpinner" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cargoEditText"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/cargo"
        android:contentDescription="@string/acces_ingrese_cargo"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitulo_registro_lab_candidato" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ultimaEmpresaEditText"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/ultimaEmpresa"
        android:contentDescription="@string/acces_ingrese_ultima_empresa"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cargoEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/anioIngresoEditText"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/anioIngreso"
        android:contentDescription="@string/acces_ingrese_anio_ingreso"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ultimaEmpresaEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/anioRetiroEditText"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/anioRetiro"
        android:contentDescription="@string/acces_ingrese_anio_retiro"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anioIngresoEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continuar_regis_lab_candidato_button"
        android:layout_width="246dp"
        android:layout_height="42dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
...
