...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/usuario_registro_edit"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:hint="@string/usuario"
        android:contentDescription="@string/acces_ingrese_usuario"
        android:inputType="textEmailAddress"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registro_candidato" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/contrasena_registro_edit"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:inputType="textPassword"
        android:hint="@string/contrasena"
        android:contentDescription="@string/acces_ingrese_contrasena"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario_registro_edit" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/repetir_contrasena_registro_edit"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:inputType="textPassword"
        android:hint="@string/repetir_contrasena"
        android:contentDescription="@string/acces_repetir_contrasena"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasena_registro_edit" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continuar_registro_button"
        android:layout_width="246dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
...
