...
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:background="@drawable/ic_edittext_background_v2"
        app:layout_constraintTop_toBottomOf="@+id/subtitulo_registro_palabra_candidato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/agregarPalabraButton" />

    <ListView
        android:id="@+id/palabrasListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/agregarPalabraButton"
...
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/agregarPalabraButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="Agregar Palabra"
        android:padding="8dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:text="+"
...
